{
  "version": 4,
  "terraform_version": "1.14.8",
  "serial": 132,
  "lineage": "1b3cb1b0-a6ba-15ca-99c2-a9c345241cac",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway",
      "name": "tgw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "amazon_side_asn": 64512,
            "arn": "arn:aws:ec2:ap-south-1:601452824785:transit-gateway/tgw-010ac4bbd5614b38e",
            "association_default_route_table_id": "tgw-rtb-065ed172de64fa9eb",
            "auto_accept_shared_attachments": "disable",
            "default_route_table_association": "enable",
            "default_route_table_propagation": "enable",
            "description": "transit gateway",
            "dns_support": "enable",
            "encryption_support": "disable",
            "id": "tgw-010ac4bbd5614b38e",
            "multicast_support": "disable",
            "owner_id": "601452824785",
            "propagation_default_route_table_id": "tgw-rtb-065ed172de64fa9eb",
            "region": "ap-south-1",
            "security_group_referencing_support": "disable",
            "tags": {
              "Name": "my-tgw"
            },
            "tags_all": {
              "Name": "my-tgw"
            },
            "vpn_ecmp_support": "enable"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_vpc_attachment",
      "name": "tgw-vpc-2-attachment",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "appliance_mode_support": "disable",
            "arn": "arn:aws:ec2:ap-south-1:601452824785:transit-gateway-attachment/tgw-attach-09ec139bfe82417e1",
            "dns_support": "enable",
            "id": "tgw-attach-09ec139bfe82417e1",
            "ipv6_support": "disable",
            "region": "ap-south-1",
            "security_group_referencing_support": "enable",
            "subnet_ids": [
              "subnet-07bf061dc133f8441",
              "subnet-0941ae747b63dfb44"
            ],
            "transit_gateway_default_route_table_association": true,
            "transit_gateway_default_route_table_propagation": true,
            "transit_gateway_id": "tgw-010ac4bbd5614b38e",
            "vpc_id": "vpc-009ef72c893460571",
            "vpc_owner_id": "601452824785"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_ec2_transit_gateway.tgw",
            "module.v2-module.aws_subnet.vpc-2-pri-subnet-1",
            "module.v2-module.aws_subnet.vpc-2-pub-subnet-1",
            "module.v2-module.aws_vpc.vpc-2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_vpc_attachment",
      "name": "tgw-vpc-3-attachment",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "appliance_mode_support": "disable",
            "arn": "arn:aws:ec2:ap-south-1:601452824785:transit-gateway-attachment/tgw-attach-0268e4cc1cbacb976",
            "dns_support": "enable",
            "id": "tgw-attach-0268e4cc1cbacb976",
            "ipv6_support": "disable",
            "region": "ap-south-1",
            "security_group_referencing_support": "enable",
            "subnet_ids": [
              "subnet-04f1449737a2f0c08",
              "subnet-0838dd6f3f1b16d06"
            ],
            "transit_gateway_default_route_table_association": true,
            "transit_gateway_default_route_table_propagation": true,
            "transit_gateway_id": "tgw-010ac4bbd5614b38e",
            "vpc_id": "vpc-0026ff9423ca14d72",
            "vpc_owner_id": "601452824785"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_ec2_transit_gateway.tgw",
            "module.v3-module.aws_subnet.vpc-3-pri-subnet-1",
            "module.v3-module.aws_subnet.vpc-3-pub-subnet-1",
            "module.v3-module.aws_vpc.vpc-3"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_vpc_attachment",
      "name": "tgw-vpc-attachment",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "appliance_mode_support": "disable",
            "arn": "arn:aws:ec2:ap-south-1:601452824785:transit-gateway-attachment/tgw-attach-03168441dd7ae1317",
            "dns_support": "enable",
            "id": "tgw-attach-03168441dd7ae1317",
            "ipv6_support": "disable",
            "region": "ap-south-1",
            "security_group_referencing_support": "enable",
            "subnet_ids": [
              "subnet-037d2e3bfd5d43e8a"
            ],
            "transit_gateway_default_route_table_association": true,
            "transit_gateway_default_route_table_propagation": true,
            "transit_gateway_id": "tgw-010ac4bbd5614b38e",
            "vpc_id": "vpc-0559ca06b2ee7eca7",
            "vpc_owner_id": "601452824785"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_ec2_transit_gateway.tgw",
            "module.v1-module.aws_subnet.vpc-1-pub-subnet-1",
            "module.v1-module.aws_vpc.vpc-1"
          ]
        }
      ]
    },
    {
      "module": "module.v1-module",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat-eip",
      "provider": "module.v1-module.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-04cb7b28a6e347f12",
            "arn": "arn:aws:ec2:ap-south-1:601452824785:elastic-ip/eipalloc-04cb7b28a6e347f12",
            "domain": "vpc",
            "id": "eipalloc-04cb7b28a6e347f12",
            "network_border_group": "ap-south-1",
            "public_dns": "ec2-65-1-137-219.ap-south-1.compute.amazonaws.com",
            "public_ip": "65.1.137.219",
            "public_ipv4_pool": "amazon",
            "region": "ap-south-1"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "601452824785",
            "id": "eipalloc-04cb7b28a6e347f12",
            "region": "ap-south-1"
          }
        }
      ]
    },
    {
      "module": "module.v1-module",
      "mode": "managed",
      "type": "aws_instance",
      "name": "vpc-1-pri-server",
      "provider": "module.v1-module.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0e38835daf6b8a2b9",
            "arn": "arn:aws:ec2:ap-south-1:601452824785:instance/i-013959ef605656e81",
            "associate_public_ip_address": false,
            "availability_zone": "ap-south-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-013959ef605656e81",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "poojikeypair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-00882307fb30c7819"
              }
            ],
            "primary_network_interface_id": "eni-00882307fb30c7819",
            "private_dns": "ip-10-0-0-28.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.28",
            "region": "ap-south-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0497171deb5c3a19c",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-019564743957b2662"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b416537d12f8d8c4",
            "tags": {
              "Name": "vpc-1-pri-server"
            },
            "tags_all": {
              "Name": "vpc-1-pri-server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-019564743957b2662"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "601452824785",
            "id": "i-013959ef605656e81",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.v1-module.aws_security_group.vpc-1-security-group",
            "module.v1-module.aws_subnet.vpc-1-pri-subnet-1",
            "module.v1-module.aws_vpc.vpc-1"
          ]
        }
      ]
    },
    {
      "module": "module.v1-module",
      "mode": "managed",
      "type": "aws_instance",
      "name": "vpc-1-pub-server",
      "provider": "module.v1-module.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0e38835daf6b8a2b9",
            "arn": "arn:aws:ec2:ap-south-1:601452824785:instance/i-09e5db9c39bb5369b",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-09e5db9c39bb5369b",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "poojikeypair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0b9415033af6fb051"
              }
            ],
            "primary_network_interface_id": "eni-0b9415033af6fb051",
            "private_dns": "ip-10-0-0-4.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.4",
            "public_ip": "43.205.144.240",
            "region": "ap-south-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-07b5500bd084f33a5",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-019564743957b2662"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-037d2e3bfd5d43e8a",
            "tags": {
              "Name": "vpc-1-pub-server"
            },
            "tags_all": {
              "Name": "vpc-1-pub-server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-019564743957b2662"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "601452824785",
            "id": "i-09e5db9c39bb5369b",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.v1-module.aws_security_group.vpc-1-security-group",
            "module.v1-module.aws_subnet.vpc-1-pub-subnet-1",
            "module.v1-module.aws_vpc.vpc-1"
          ]
        }
      ]
    },
    {
      "module": "module.v1-module",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "vpc-1-igw",
      "provider": "module.v1-module.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:601452824785:internet-gateway/igw-0f3e9d19188810025",
            "id": "igw-0f3e9d19188810025",
            "owner_id": "601452824785",
            "region": "ap-south-1",
            "tags": {
              "Name": "vpc-1-igw"
            },
            "tags_all": {
              "Name": "vpc-1-igw"
            },
            "vpc_id": "vpc-0559ca06b2ee7eca7"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "601452824785",
            "id": "igw-0f3e9d19188810025",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.v1-module.aws_vpc.vpc-1"
          ]
        }
      ]
    },
    {
      "module": "module.v1-module",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "vpc-1-ngw",
      "provider": "module.v1-module.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-04cb7b28a6e347f12",
            "association_id": "eipassoc-09b81e16199b8c80d",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-0553c00ee9d8c2dcd",
            "network_interface_id": "eni-091d0e2ef1c73ddbb",
            "private_ip": "10.0.0.12",
            "public_ip": "65.1.137.219",
            "region": "ap-south-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-037d2e3bfd5d43e8a",
            "tags": {
              "Name": "vpc-1-ngw"
            },
            "tags_all": {
              "Name": "vpc-1-ngw"
            },
            "vpc_id": "vpc-0559ca06b2ee7eca7"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "601452824785",
            "id": "nat-0553c00ee9d8c2dcd",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.v1-module.aws_eip.nat-eip",
            "module.v1-module.aws_subnet.vpc-1-pub-subnet-1",
            "module.v1-module.aws_vpc.vpc-1"
          ]
        }
      ]
    },
    {
      "module": "module.v1-module",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "vpc-1-pri-route-table",
      "provider": "module.v1-module.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:601452824785:route-table/rtb-090dbba5bc91f6273",
            "id": "rtb-090dbba5bc91f6273",
            "owner_id": "601452824785",
            "propagating_vgws": [],
            "region": "ap-south-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0553c00ee9d8c2dcd",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "odb_network_arn": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "vpc-1-pri-route-table"
            },
            "tags_all": {
              "Name": "vpc-1-pri-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0559ca06b2ee7eca7"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "601452824785",
            "id": "rtb-090dbba5bc91f6273",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.v1-module.aws_eip.nat-eip",
            "module.v1-module.aws_nat_gateway.vpc-1-ngw",
            "module.v1-module.aws_subnet.vpc-1-pub-subnet-1",
            "module.v1-module.aws_vpc.vpc-1"
          ]
        }
      ]
    },
    {
      "module": "module.v1-module",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "vpc-1-pub-route-table",
      "provider": "module.v1-module.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:601452824785:route-table/rtb-0f61947b849588dea",
            "id": "rtb-0f61947b849588dea",
            "owner_id": "601452824785",
            "propagating_vgws": [],
            "region": "ap-south-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0f3e9d19188810025",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "odb_network_arn": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "vpc-1-pub-route-table"
            },
            "tags_all": {
              "Name": "vpc-1-pub-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0559ca06b2ee7eca7"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "601452824785",
            "id": "rtb-0f61947b849588dea",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.v1-module.aws_internet_gateway.vpc-1-igw",
            "module.v1-module.aws_vpc.vpc-1"
          ]
        }
      ]
    },
    {
      "module": "module.v1-module",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "vpc-1-pri-rt-association",
      "provider": "module.v1-module.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "subnet-1",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03ffe787eab554d34",
            "region": "ap-south-1",
            "route_table_id": "rtb-090dbba5bc91f6273",
            "subnet_id": "subnet-0b416537d12f8d8c4"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "601452824785",
            "id": "rtbassoc-03ffe787eab554d34",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.v1-module.aws_eip.nat-eip",
            "module.v1-module.aws_nat_gateway.vpc-1-ngw",
            "module.v1-module.aws_route_table.vpc-1-pri-route-table",
            "module.v1-module.aws_subnet.vpc-1-pri-subnet-1",
            "module.v1-module.aws_subnet.vpc-1-pub-subnet-1",
            "module.v1-module.aws_vpc.vpc-1"
          ]
        }
      ]
    },
    {
      "module": "module.v1-module",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "vpc-1-pub-rt-association",
      "provider": "module.v1-module.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "subnet-1",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b46875f8c3e96ab0",
            "region": "ap-south-1",
            "route_table_id": "rtb-0f61947b849588dea",
            "subnet_id": "subnet-037d2e3bfd5d43e8a"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "601452824785",
            "id": "rtbassoc-0b46875f8c3e96ab0",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.v1-module.aws_internet_gateway.vpc-1-igw",
            "module.v1-module.aws_route_table.vpc-1-pub-route-table",
            "module.v1-module.aws_subnet.vpc-1-pub-subnet-1",
            "module.v1-module.aws_vpc.vpc-1"
          ]
        }
      ]
    },
    {
      "module": "module.v1-module",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "vpc-1-security-group",
      "provider": "module.v1-module.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:601452824785:security-group/sg-019564743957b2662",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-019564743957b2662",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20260616075002188800000001",
            "name_prefix": "terraform-",
            "owner_id": "601452824785",
            "region": "ap-south-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "vpc-1-security-group"
            },
            "tags_all": {
              "Name": "vpc-1-security-group"
            },
            "timeouts": null,
            "vpc_id": "vpc-0559ca06b2ee7eca7"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "601452824785",
            "id": "sg-019564743957b2662",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.v1-module.aws_vpc.vpc-1"
          ]
        }
      ]
    },
    {
      "module": "module.v1-module",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "vpc-1-pri-subnet-1",
      "provider": "module.v1-module.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:601452824785:subnet/subnet-0b416537d12f8d8c4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.0.16/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b416537d12f8d8c4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "601452824785",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "vpc-1-pri-subnet-1"
            },
            "tags_all": {
              "Name": "vpc-1-pri-subnet-1"
            },
            "vpc_id": "vpc-0559ca06b2ee7eca7"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "601452824785",
            "id": "subnet-0b416537d12f8d8c4",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.v1-module.aws_vpc.vpc-1"
          ]
        }
      ]
    },
    {
      "module": "module.v1-module",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "vpc-1-pub-subnet-1",
      "provider": "module.v1-module.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:601452824785:subnet/subnet-037d2e3bfd5d43e8a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.0.0/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-037d2e3bfd5d43e8a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "601452824785",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "vpc-1-pub-subnet-1"
            },
            "tags_all": {
              "Name": "vpc-1-pub-subnet-1"
            },
            "vpc_id": "vpc-0559ca06b2ee7eca7"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "601452824785",
            "id": "subnet-037d2e3bfd5d43e8a",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.v1-module.aws_vpc.vpc-1"
          ]
        }
      ]
    },
    {
      "module": "module.v1-module",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc-1",
      "provider": "module.v1-module.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:601452824785:vpc/vpc-0559ca06b2ee7eca7",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-030afbdc64678a107",
            "default_route_table_id": "rtb-05794f1ff81f48f27",
            "default_security_group_id": "sg-0e40af286cc3ee181",
            "dhcp_options_id": "dopt-00e1d9ee407cb9daf",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0559ca06b2ee7eca7",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-05794f1ff81f48f27",
            "owner_id": "601452824785",
            "region": "ap-south-1",
            "tags": {
              "Name": "vpc-1"
            },
            "tags_all": {
              "Name": "vpc-1"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "601452824785",
            "id": "vpc-0559ca06b2ee7eca7",
            "region": "ap-south-1"
          }
        }
      ]
    },
    {
      "module": "module.v2-module",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat-eip",
      "provider": "module.v2-module.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-032e8df278138ca69",
            "arn": "arn:aws:ec2:ap-south-1:601452824785:elastic-ip/eipalloc-032e8df278138ca69",
            "domain": "vpc",
            "id": "eipalloc-032e8df278138ca69",
            "network_border_group": "ap-south-1",
            "public_dns": "ec2-13-206-104-84.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.206.104.84",
            "public_ipv4_pool": "amazon",
            "region": "ap-south-1"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "601452824785",
            "id": "eipalloc-032e8df278138ca69",
            "region": "ap-south-1"
          }
        }
      ]
    },
    {
      "module": "module.v2-module",
      "mode": "managed",
      "type": "aws_instance",
      "name": "vpc-2-pri-server",
      "provider": "module.v2-module.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0e38835daf6b8a2b9",
            "arn": "arn:aws:ec2:ap-south-1:601452824785:instance/i-09eb27b24a3b2698d",
            "associate_public_ip_address": false,
            "availability_zone": "ap-south-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-09eb27b24a3b2698d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "poojikeypair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0730484bd0966813e"
              }
            ],
            "primary_network_interface_id": "eni-0730484bd0966813e",
            "private_dns": "ip-11-0-0-26.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "11.0.0.26",
            "region": "ap-south-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0c0cd53acbdd527d6",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-0ec4fb5f0548469af"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0941ae747b63dfb44",
            "tags": {
              "Name": "vpc-2-pri-server"
            },
            "tags_all": {
              "Name": "vpc-2-pri-server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0ec4fb5f0548469af"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "601452824785",
            "id": "i-09eb27b24a3b2698d",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.v2-module.aws_security_group.vpc-2-security-group",
            "module.v2-module.aws_subnet.vpc-2-pri-subnet-1",
            "module.v2-module.aws_vpc.vpc-2"
          ]
        }
      ]
    },
    {
      "module": "module.v2-module",
      "mode": "managed",
      "type": "aws_instance",
      "name": "vpc-2-pub-server",
      "provider": "module.v2-module.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0e38835daf6b8a2b9",
            "arn": "arn:aws:ec2:ap-south-1:601452824785:instance/i-04c5138d43b4530bd",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-04c5138d43b4530bd",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "poojikeypair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-085aaed968fe423cf"
              }
            ],
            "primary_network_interface_id": "eni-085aaed968fe423cf",
            "private_dns": "ip-11-0-0-11.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "11.0.0.11",
            "public_ip": "3.111.144.135",
            "region": "ap-south-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0527f4e7ac4479f00",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-0ec4fb5f0548469af"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07bf061dc133f8441",
            "tags": {
              "Name": "vpc-2-pub-server"
            },
            "tags_all": {
              "Name": "vpc-2-pub-server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0ec4fb5f0548469af"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "601452824785",
            "id": "i-04c5138d43b4530bd",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.v2-module.aws_security_group.vpc-2-security-group",
            "module.v2-module.aws_subnet.vpc-2-pub-subnet-1",
            "module.v2-module.aws_vpc.vpc-2"
          ]
        }
      ]
    },
    {
      "module": "module.v2-module",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "vpc-2-igw",
      "provider": "module.v2-module.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:601452824785:internet-gateway/igw-0cb8c180d41ebda6b",
            "id": "igw-0cb8c180d41ebda6b",
            "owner_id": "601452824785",
            "region": "ap-south-1",
            "tags": {
              "Name": "vpc-2-igw"
            },
            "tags_all": {
              "Name": "vpc-2-igw"
            },
            "vpc_id": "vpc-009ef72c893460571"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "601452824785",
            "id": "igw-0cb8c180d41ebda6b",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.v2-module.aws_vpc.vpc-2"
          ]
        }
      ]
    },
    {
      "module": "module.v2-module",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "vpc-2-ngw",
      "provider": "module.v2-module.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-032e8df278138ca69",
            "association_id": "eipassoc-0bb2cd36aca13e40e",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-0af49fdd0b4dfa68b",
            "network_interface_id": "eni-007867150be2d34eb",
            "private_ip": "11.0.0.8",
            "public_ip": "13.206.104.84",
            "region": "ap-south-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-07bf061dc133f8441",
            "tags": {
              "Name": "vpc-2-ngw"
            },
            "tags_all": {
              "Name": "vpc-2-ngw"
            },
            "vpc_id": "vpc-009ef72c893460571"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "601452824785",
            "id": "nat-0af49fdd0b4dfa68b",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.v2-module.aws_eip.nat-eip",
            "module.v2-module.aws_subnet.vpc-2-pub-subnet-1",
            "module.v2-module.aws_vpc.vpc-2"
          ]
        }
      ]
    },
    {
      "module": "module.v2-module",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "vpc-2-pri-route-table",
      "provider": "module.v2-module.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:601452824785:route-table/rtb-0943a879088910d7c",
            "id": "rtb-0943a879088910d7c",
            "owner_id": "601452824785",
            "propagating_vgws": [],
            "region": "ap-south-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0af49fdd0b4dfa68b",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "odb_network_arn": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "vpc-2-pri-route-table"
            },
            "tags_all": {
              "Name": "vpc-2-pri-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-009ef72c893460571"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "601452824785",
            "id": "rtb-0943a879088910d7c",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.v2-module.aws_eip.nat-eip",
            "module.v2-module.aws_nat_gateway.vpc-2-ngw",
            "module.v2-module.aws_subnet.vpc-2-pub-subnet-1",
            "module.v2-module.aws_vpc.vpc-2"
          ]
        }
      ]
    },
    {
      "module": "module.v2-module",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "vpc-2-pub-route-table",
      "provider": "module.v2-module.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:601452824785:route-table/rtb-00d9a31aeb9bacb23",
            "id": "rtb-00d9a31aeb9bacb23",
            "owner_id": "601452824785",
            "propagating_vgws": [],
            "region": "ap-south-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0cb8c180d41ebda6b",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "odb_network_arn": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "vpc-2-pub-route-table"
            },
            "tags_all": {
              "Name": "vpc-2-pub-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-009ef72c893460571"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "601452824785",
            "id": "rtb-00d9a31aeb9bacb23",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.v2-module.aws_internet_gateway.vpc-2-igw",
            "module.v2-module.aws_vpc.vpc-2"
          ]
        }
      ]
    },
    {
      "module": "module.v2-module",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "vpc-2-pri-rt-association",
      "provider": "module.v2-module.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "subnet-1",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a6f193dc9c798aa1",
            "region": "ap-south-1",
            "route_table_id": "rtb-0943a879088910d7c",
            "subnet_id": "subnet-0941ae747b63dfb44"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "601452824785",
            "id": "rtbassoc-0a6f193dc9c798aa1",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.v2-module.aws_eip.nat-eip",
            "module.v2-module.aws_nat_gateway.vpc-2-ngw",
            "module.v2-module.aws_route_table.vpc-2-pri-route-table",
            "module.v2-module.aws_subnet.vpc-2-pri-subnet-1",
            "module.v2-module.aws_subnet.vpc-2-pub-subnet-1",
            "module.v2-module.aws_vpc.vpc-2"
          ]
        }
      ]
    },
    {
      "module": "module.v2-module",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "vpc-2-pub-rt-association",
      "provider": "module.v2-module.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "subnet-1",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06c98e90fe52db234",
            "region": "ap-south-1",
            "route_table_id": "rtb-00d9a31aeb9bacb23",
            "subnet_id": "subnet-07bf061dc133f8441"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "601452824785",
            "id": "rtbassoc-06c98e90fe52db234",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.v2-module.aws_internet_gateway.vpc-2-igw",
            "module.v2-module.aws_route_table.vpc-2-pub-route-table",
            "module.v2-module.aws_subnet.vpc-2-pub-subnet-1",
            "module.v2-module.aws_vpc.vpc-2"
          ]
        }
      ]
    },
    {
      "module": "module.v2-module",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "vpc-2-security-group",
      "provider": "module.v2-module.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:601452824785:security-group/sg-0ec4fb5f0548469af",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ec4fb5f0548469af",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20260616075001422200000001",
            "name_prefix": "terraform-",
            "owner_id": "601452824785",
            "region": "ap-south-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "vpc-2-security-group"
            },
            "tags_all": {
              "Name": "vpc-2-security-group"
            },
            "timeouts": null,
            "vpc_id": "vpc-009ef72c893460571"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "601452824785",
            "id": "sg-0ec4fb5f0548469af",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.v2-module.aws_vpc.vpc-2"
          ]
        }
      ]
    },
    {
      "module": "module.v2-module",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "vpc-2-pri-subnet-1",
      "provider": "module.v2-module.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:601452824785:subnet/subnet-0941ae747b63dfb44",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "11.0.0.16/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0941ae747b63dfb44",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "601452824785",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "vpc-2-pri-subnet-1"
            },
            "tags_all": {
              "Name": "vpc-2-pri-subnet-1"
            },
            "vpc_id": "vpc-009ef72c893460571"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "601452824785",
            "id": "subnet-0941ae747b63dfb44",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.v2-module.aws_vpc.vpc-2"
          ]
        }
      ]
    },
    {
      "module": "module.v2-module",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "vpc-2-pub-subnet-1",
      "provider": "module.v2-module.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:601452824785:subnet/subnet-07bf061dc133f8441",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "11.0.0.0/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07bf061dc133f8441",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "601452824785",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "vpc-2-pub-subnet-1"
            },
            "tags_all": {
              "Name": "vpc-2-pub-subnet-1"
            },
            "vpc_id": "vpc-009ef72c893460571"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "601452824785",
            "id": "subnet-07bf061dc133f8441",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.v2-module.aws_vpc.vpc-2"
          ]
        }
      ]
    },
    {
      "module": "module.v2-module",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc-2",
      "provider": "module.v2-module.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:601452824785:vpc/vpc-009ef72c893460571",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "11.0.0.0/16",
            "default_network_acl_id": "acl-03179466b8f5fb886",
            "default_route_table_id": "rtb-0bf302cb16f8cfa00",
            "default_security_group_id": "sg-0ca615b3e834501a9",
            "dhcp_options_id": "dopt-00e1d9ee407cb9daf",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-009ef72c893460571",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0bf302cb16f8cfa00",
            "owner_id": "601452824785",
            "region": "ap-south-1",
            "tags": {
              "Name": "vpc-2"
            },
            "tags_all": {
              "Name": "vpc-2"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "601452824785",
            "id": "vpc-009ef72c893460571",
            "region": "ap-south-1"
          }
        }
      ]
    },
    {
      "module": "module.v3-module",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat-eip",
      "provider": "module.v3-module.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08c1c712e469d1cee",
            "arn": "arn:aws:ec2:ap-south-1:601452824785:elastic-ip/eipalloc-08c1c712e469d1cee",
            "domain": "vpc",
            "id": "eipalloc-08c1c712e469d1cee",
            "network_border_group": "ap-south-1",
            "public_dns": "ec2-52-66-55-129.ap-south-1.compute.amazonaws.com",
            "public_ip": "52.66.55.129",
            "public_ipv4_pool": "amazon",
            "region": "ap-south-1"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "601452824785",
            "id": "eipalloc-08c1c712e469d1cee",
            "region": "ap-south-1"
          }
        }
      ]
    },
    {
      "module": "module.v3-module",
      "mode": "managed",
      "type": "aws_instance",
      "name": "vpc-3-pri-server",
      "provider": "module.v3-module.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0e38835daf6b8a2b9",
            "arn": "arn:aws:ec2:ap-south-1:601452824785:instance/i-0ccd8a8933515aa83",
            "associate_public_ip_address": false,
            "availability_zone": "ap-south-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0ccd8a8933515aa83",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "poojikeypair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0a6fafa10c85cc1e7"
              }
            ],
            "primary_network_interface_id": "eni-0a6fafa10c85cc1e7",
            "private_dns": "ip-12-0-0-25.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "12.0.0.25",
            "region": "ap-south-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-07b7b1300416d06e4",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-0d7d4a3c131dfb55d"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0838dd6f3f1b16d06",
            "tags": {
              "Name": "vpc-3-pri-server"
            },
            "tags_all": {
              "Name": "vpc-3-pri-server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0d7d4a3c131dfb55d"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "601452824785",
            "id": "i-0ccd8a8933515aa83",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.v3-module.aws_security_group.vpc-3-security-group",
            "module.v3-module.aws_subnet.vpc-3-pri-subnet-1",
            "module.v3-module.aws_vpc.vpc-3"
          ]
        }
      ]
    },
    {
      "module": "module.v3-module",
      "mode": "managed",
      "type": "aws_instance",
      "name": "vpc-3-pub-server",
      "provider": "module.v3-module.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0e38835daf6b8a2b9",
            "arn": "arn:aws:ec2:ap-south-1:601452824785:instance/i-0be319770a951a206",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0be319770a951a206",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "poojikeypair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0c0cbc4a5fecd4ce5"
              }
            ],
            "primary_network_interface_id": "eni-0c0cbc4a5fecd4ce5",
            "private_dns": "ip-12-0-0-12.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "12.0.0.12",
            "public_ip": "13.207.189.31",
            "region": "ap-south-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0d5111731b60c9572",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-0d7d4a3c131dfb55d"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-04f1449737a2f0c08",
            "tags": {
              "Name": "vpc-3-pub-server"
            },
            "tags_all": {
              "Name": "vpc-3-pub-server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0d7d4a3c131dfb55d"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "601452824785",
            "id": "i-0be319770a951a206",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.v3-module.aws_security_group.vpc-3-security-group",
            "module.v3-module.aws_subnet.vpc-3-pub-subnet-1",
            "module.v3-module.aws_vpc.vpc-3"
          ]
        }
      ]
    },
    {
      "module": "module.v3-module",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "vpc-3-igw",
      "provider": "module.v3-module.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:601452824785:internet-gateway/igw-01a55c5030e468145",
            "id": "igw-01a55c5030e468145",
            "owner_id": "601452824785",
            "region": "ap-south-1",
            "tags": {
              "Name": "vpc-3-igw"
            },
            "tags_all": {
              "Name": "vpc-3-igw"
            },
            "vpc_id": "vpc-0026ff9423ca14d72"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "601452824785",
            "id": "igw-01a55c5030e468145",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.v3-module.aws_vpc.vpc-3"
          ]
        }
      ]
    },
    {
      "module": "module.v3-module",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "vpc-3-ngw",
      "provider": "module.v3-module.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08c1c712e469d1cee",
            "association_id": "eipassoc-0a7448a591665f1e9",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-0db90653f8d76aac2",
            "network_interface_id": "eni-02b46e1db6b841168",
            "private_ip": "12.0.0.13",
            "public_ip": "52.66.55.129",
            "region": "ap-south-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-04f1449737a2f0c08",
            "tags": {
              "Name": "vpc-3-ngw"
            },
            "tags_all": {
              "Name": "vpc-3-ngw"
            },
            "vpc_id": "vpc-0026ff9423ca14d72"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "601452824785",
            "id": "nat-0db90653f8d76aac2",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.v3-module.aws_eip.nat-eip",
            "module.v3-module.aws_subnet.vpc-3-pub-subnet-1",
            "module.v3-module.aws_vpc.vpc-3"
          ]
        }
      ]
    },
    {
      "module": "module.v3-module",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "vpc-3-pri-route-table",
      "provider": "module.v3-module.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:601452824785:route-table/rtb-04247224ded64b035",
            "id": "rtb-04247224ded64b035",
            "owner_id": "601452824785",
            "propagating_vgws": [],
            "region": "ap-south-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0db90653f8d76aac2",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "odb_network_arn": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "vpc-3-pri-route-table"
            },
            "tags_all": {
              "Name": "vpc-3-pri-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0026ff9423ca14d72"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "601452824785",
            "id": "rtb-04247224ded64b035",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.v3-module.aws_eip.nat-eip",
            "module.v3-module.aws_nat_gateway.vpc-3-ngw",
            "module.v3-module.aws_subnet.vpc-3-pub-subnet-1",
            "module.v3-module.aws_vpc.vpc-3"
          ]
        }
      ]
    },
    {
      "module": "module.v3-module",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "vpc-3-pub-route-table",
      "provider": "module.v3-module.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:601452824785:route-table/rtb-06b38f634636947c3",
            "id": "rtb-06b38f634636947c3",
            "owner_id": "601452824785",
            "propagating_vgws": [],
            "region": "ap-south-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-01a55c5030e468145",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "odb_network_arn": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "vpc-3-pub-route-table"
            },
            "tags_all": {
              "Name": "vpc-3-pub-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0026ff9423ca14d72"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "601452824785",
            "id": "rtb-06b38f634636947c3",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.v3-module.aws_internet_gateway.vpc-3-igw",
            "module.v3-module.aws_vpc.vpc-3"
          ]
        }
      ]
    },
    {
      "module": "module.v3-module",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "vpc-3-pri-rt-association",
      "provider": "module.v3-module.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "subnet-1",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00d9f809ed9dc2c9b",
            "region": "ap-south-1",
            "route_table_id": "rtb-04247224ded64b035",
            "subnet_id": "subnet-0838dd6f3f1b16d06"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "601452824785",
            "id": "rtbassoc-00d9f809ed9dc2c9b",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.v3-module.aws_eip.nat-eip",
            "module.v3-module.aws_nat_gateway.vpc-3-ngw",
            "module.v3-module.aws_route_table.vpc-3-pri-route-table",
            "module.v3-module.aws_subnet.vpc-3-pri-subnet-1",
            "module.v3-module.aws_subnet.vpc-3-pub-subnet-1",
            "module.v3-module.aws_vpc.vpc-3"
          ]
        }
      ]
    },
    {
      "module": "module.v3-module",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "vpc-3-pub-rt-association",
      "provider": "module.v3-module.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "subnet-1",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04f64dd213fe3f14c",
            "region": "ap-south-1",
            "route_table_id": "rtb-06b38f634636947c3",
            "subnet_id": "subnet-04f1449737a2f0c08"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "601452824785",
            "id": "rtbassoc-04f64dd213fe3f14c",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.v3-module.aws_internet_gateway.vpc-3-igw",
            "module.v3-module.aws_route_table.vpc-3-pub-route-table",
            "module.v3-module.aws_subnet.vpc-3-pub-subnet-1",
            "module.v3-module.aws_vpc.vpc-3"
          ]
        }
      ]
    },
    {
      "module": "module.v3-module",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "vpc-3-security-group",
      "provider": "module.v3-module.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:601452824785:security-group/sg-0d7d4a3c131dfb55d",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d7d4a3c131dfb55d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20260616075001390200000001",
            "name_prefix": "terraform-",
            "owner_id": "601452824785",
            "region": "ap-south-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "vpc-3-security-group"
            },
            "tags_all": {
              "Name": "vpc-3-security-group"
            },
            "timeouts": null,
            "vpc_id": "vpc-0026ff9423ca14d72"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "601452824785",
            "id": "sg-0d7d4a3c131dfb55d",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.v3-module.aws_vpc.vpc-3"
          ]
        }
      ]
    },
    {
      "module": "module.v3-module",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "vpc-3-pri-subnet-1",
      "provider": "module.v3-module.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:601452824785:subnet/subnet-0838dd6f3f1b16d06",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "12.0.0.16/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0838dd6f3f1b16d06",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "601452824785",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "vpc-3-pri-subnet-1"
            },
            "tags_all": {
              "Name": "vpc-3-pri-subnet-1"
            },
            "vpc_id": "vpc-0026ff9423ca14d72"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "601452824785",
            "id": "subnet-0838dd6f3f1b16d06",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.v3-module.aws_vpc.vpc-3"
          ]
        }
      ]
    },
    {
      "module": "module.v3-module",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "vpc-3-pub-subnet-1",
      "provider": "module.v3-module.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:601452824785:subnet/subnet-04f1449737a2f0c08",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "12.0.0.0/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04f1449737a2f0c08",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "601452824785",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "vpc-3-pub-subnet-1"
            },
            "tags_all": {
              "Name": "vpc-3-pub-subnet-1"
            },
            "vpc_id": "vpc-0026ff9423ca14d72"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "601452824785",
            "id": "subnet-04f1449737a2f0c08",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.v3-module.aws_vpc.vpc-3"
          ]
        }
      ]
    },
    {
      "module": "module.v3-module",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc-3",
      "provider": "module.v3-module.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:601452824785:vpc/vpc-0026ff9423ca14d72",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "12.0.0.0/16",
            "default_network_acl_id": "acl-0bbe5b26338f66e31",
            "default_route_table_id": "rtb-0e456d355fc2fc8e0",
            "default_security_group_id": "sg-0ca3b37297f091e5b",
            "dhcp_options_id": "dopt-00e1d9ee407cb9daf",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0026ff9423ca14d72",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0e456d355fc2fc8e0",
            "owner_id": "601452824785",
            "region": "ap-south-1",
            "tags": {
              "Name": "vpc-3"
            },
            "tags_all": {
              "Name": "vpc-3"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "601452824785",
            "id": "vpc-0026ff9423ca14d72",
            "region": "ap-south-1"
          }
        }
      ]
    }
  ]
}